<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:menuCategory="container" >
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"
            app:showAsAction="never" />
        <item
            android:id="@+id/theme_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/theme_setting"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_change_notification"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/change_notification_settings"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_language_settings"
            android:title="@string/language_settings_menu_item"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_close_app"
            android:title="@string/exit_menu_item"
            app:showAsAction="never" />
    </group>

</menu>